[package]
name = "pano-tiler"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
webp = { version = "0.3.1", optional = true }
fast_image_resize = { version = "6.0.0", features = ["image"] }

[features]
default = ["webp"]
webp = ["dep:webp"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "pano_bench"
harness = false