[package]
name = "panorama-tiler"
version = "0.1.0"
edition = "2024"
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
description = "A tiling and configuration generator to convert equirectangular or cylindrical panoramas into multi-resolution cubemaps."
readme = "README.md"
repository = "https://github.com/ruurdbijlsma/panorama-tiler"
homepage = "https://github.com/ruurdbijlsma/panorama-tiler"
license = "MIT OR Apache-2.0"
keywords = ["panorama", "pannellum", "cubemap", "tiling", "multires"]
categories = ["multimedia::images", "rendering", "visualization"]

[dependencies]
image = "0.25.10"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
webp = { version = "0.3.1", optional = true }
fast_image_resize = { version = "6.0.0", features = ["image"] }
exif = { package = "kamadak-exif", version = "0.6.1", optional = true }
xmpkit = { version = "0.1.4", optional = true }

[features]
default = ["webp", "metadata"]
webp = ["dep:webp"]
metadata = ["dep:exif", "dep:xmpkit"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "pano_bench"
harness = false

[[bench]]
name = "end_to_end_bench"
harness = false